<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_aluno" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_aluno" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idade_aluno" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_idade"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo_aluno" />

    <RadioGroup
        android:id="@+id/radioGroup_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radioButton_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/morada_aluno" />

    </RadioGroup>

    <EditText
        android:id="@+id/txtAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_morada" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone_aluno" />

    <EditText
        android:id="@+id/txtTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_telefone"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar" />

</LinearLayout>
